added models and necessary changes

--- a/ecommerce/templates/ecom/contactus.html
+++ b/ecommerce/templates/ecom/contactus.html
@@ -19,7 +19,7 @@
   {%endif%}
 
   <center>
-    <h3 class='alert alert-success'>Send Us Your Valuable Feedback !</h3>
+    <h3 class='alert alert-success'>Send Us Your Valuable Review !</h3>
 
     <form method="POST">
       <!-- Very Important csrf Token -->
