--- a/ecommerce/templates/ecom/admin_base.html
+++ b/ecommerce/templates/ecom/admin_base.html
@@ -93,7 +93,7 @@
           <a href="/view-customer" class="nav-item nav-link">Customer</a>
           <a href="/admin-view-booking" class="nav-item nav-link">Booking</a>
           <a href="/admin-products" class="nav-item nav-link">Products</a>
-          <a href="/view-feedback" class="nav-item nav-link">Feedback</a>
+          <a href="/view-Review" class="nav-item nav-link">Review</a>
         </div>
 
         <div class="navbar-nav navbar-right">
