--- a/ecommerce/templates/ecom/contactussuccess.html
+++ b/ecommerce/templates/ecom/contactussuccess.html
@@ -26,7 +26,7 @@
   <br><br>
   <div class="jumbotron">
     <h1 class="display-4">Your message sent successfully !</h1>
-    <p class="lead">We will respond to your feedback soon</p>
+    <p class="lead">We will respond to your Review soon</p>
     <hr class="my-4">
     <p>Check other features of website !</p>
     <p class="lead">
