--- a/ecommerce/templates/ecom/customer_navbar.html
+++ b/ecommerce/templates/ecom/customer_navbar.html
@@ -207,7 +207,7 @@
                       <li class="upper-links"><a class="links" href="/logout">Logout</a></li>
                     <li class="upper-links dropdown"><a class="links" href="">More</a>
                         <ul class="dropdown-menu">
-                          <li class="profile-li"><a class="profile-links" href="/send-feedback">Send Feedback</a></li>
+                          <li class="profile-li"><a class="profile-links" href="/send-Review">Send Review</a></li>
                             <li class="profile-li"><a class="profile-links" href="/contactus">Contact Us</a></li>
                             <li class="profile-li"><a class="profile-links" href="/aboutus">About Us</a></li>
                         </ul>
