--- a/ecommerce/templates/ecom/feedback_sent.html
+++ b/ecommerce/templates/ecom/feedback_sent.html
@@ -10,7 +10,7 @@
     {% include "ecom/navbar.html" %}
   {%endif%}
 <br><br><br>
-<h3 style="color:blue;text-align:center;">Your Feedback Sent Succesfully !</h3>
+<h3 style="color:blue;text-align:center;">Your Review Sent Succesfully !</h3>
 <br>
 <div style="text-align:center;">
   <img src="{% static "images/success.png" %}"  style="width:100px; height:100px; ">
