--- a/ecommerce/templates/ecom/view_feedback.html
+++ b/ecommerce/templates/ecom/view_feedback.html
@@ -41,12 +41,12 @@ facebook : fb.com/ .luv
 -->
 
 <br><br><br><br>
-<h2 style="text-align:center; color:blue;">Feedbacks By User</h2>
+<h2 style="text-align:center; color:blue;">Reviews By User</h2>
 <hr>
-{%for f in feedbacks%}
+{%for f in Reviews%}
 <div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-  <strong>{{f.date}} ||By : {{f.name}} </strong><br> {{f.feedback}}
+  <strong>{{f.date}} ||By : {{f.name}} </strong><br> {{f.Review}}
 </div>
 {%endfor%}
 <!--
