changed html files

--- a/ecommerce/templates/ecom/aboutus.html
+++ b/ecommerce/templates/ecom/aboutus.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>LazyCoder ||  </title>
+  <title>Ecommerce </title>
 
   <title> </title>
   <style media="screen">
@@ -21,15 +21,11 @@
   {%else%}
     {% include "ecom/navbar.html" %}
   {%endif%}
-  <br><br><br>
-<h3 style="text-align:center;">“I don’t create companies for the sake of creating companies, but to get things done.” </h3>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<h3 style="text-align:center;">E-Commerce Website created by Soustab Haldar and Rituraj Barai </h3>
+
   {% include "ecom/footer.html" %}
 </body>
-<!--
-developed By :    
-facebook : fb.com/ .luv
-youtube : youtube.com/lazycoders
--->
+
 
 </html>
