--- a/ecommerce/templates/ecom/aboutus.html
+++ b/ecommerce/templates/ecom/aboutus.html
@@ -22,9 +22,9 @@
     {% include "ecom/navbar.html" %}
   {%endif%}
 
-<h3 style="text-align:center;">E-Commerce Website created by Soustab Haldar and Rituraj Barai </h3>
+<h3 style="text-align:center; margin-top:60px">E-Commerce Website created by Soustab Haldar and Rituraj Barai </h3>
 
-  {% include "ecom/footer.html" %}
+  
 </body>
 
 
