--- a/ecommerce/templates/ecom/cart.html
+++ b/ecommerce/templates/ecom/cart.html
@@ -95,7 +95,7 @@
       </tr>
       {%else%}
       <br><br><br>
-      <h1>no products</h1>
+      <h1>No Products in cart.</h1>
       {% endif %}
       {% endfor %}
     </table>
