--- a/ecommerce/templates/ecom/customer_navbar.html
+++ b/ecommerce/templates/ecom/customer_navbar.html
@@ -207,7 +207,6 @@
                       <li class="upper-links"><a class="links" href="/logout">Logout</a></li>
                     <li class="upper-links dropdown"><a class="links" href="">More</a>
                         <ul class="dropdown-menu">
-                          <li class="profile-li"><a class="profile-links" href="/send-Review">Send Review</a></li>
                             <li class="profile-li"><a class="profile-links" href="/contactus">Contact Us</a></li>
                             <li class="profile-li"><a class="profile-links" href="/aboutus">About Us</a></li>
                         </ul>
@@ -216,7 +215,7 @@
             </div>
             <div class="row row2">
                 <div class="col-sm-2">
-                    <h2 style="margin:0px;"><a style="text-decoration:none; color:white;" href="/"><span class="largenav">Ecommerce </span></a></h2>
+                    <h2 style="margin:0px;"><a style="text-decoration:none; color:white;" href="/"><span class="largenav">BoldStore </span></a></h2>
                 </div>
 
 
